2014-03-05  Martin Robinson  <mrobinson@igalia.com>

        [CMake] Ninja generator builds fail with "Argument list too long"
        https://bugs.webkit.org/show_bug.cgi?id=129771

        Reviewed by Daniel Bates.

        * Source/cmake/OptionsCommon.cmake: Work around a bug in the Ninja CMake generator,
        by forcing the use of response files.

2014-03-05  Ryuan Choi  <ryuan.choi@samsung.com>

        [CMake] Use thin archives if building on Linux for non-shared-core debug builds
        https://bugs.webkit.org/show_bug.cgi?id=108330

        Reviewed by Martin Robinson.

        In order to get non-shared debug builds, this patch applied T option for
        thin archives to the flags passed to ar when cmake based ports build on linux.
        In addition, applied u option which avoids adding a file twice.

        * Source/cmake/OptionsCommon.cmake: Moved archive options from OptionsGTK.cmake.
        * Source/cmake/OptionsEfl.cmake:
        Removed error messages for non-shared-core debug builds.
        * Source/cmake/OptionsGTK.cmake: Moved archive options to OptionsCommon.cmake.

2014-03-04  Zan Dobersek  <zdobersek@igalia.com>

        [GTK] Build the Udis86 disassembler
        https://bugs.webkit.org/show_bug.cgi?id=129679

        Reviewed by Michael Saboff.

        * GNUmakefile.am: Add the Udis86_nosources variable.
        * Source/cmake/OptionsGTK.cmake: Enable the Udis86 disassembler.

2014-03-04  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Simplify the GObject DOM bindings API break check into one step
        https://bugs.webkit.org/show_bug.cgi?id=129571

        Reviewed by Carlos Garcia Campos.

        * Source/PlatformGTK.cmake: We don't need to run the API break check before gtkdoc generation.
        Add the check to 'make check.'

2014-03-04  Martin Robinson  <mrobinson@igalia.com>

        [GTK][CMake] ENABLE_NAVIGATOR_CONTENT_UTILS is mistakenly enabled for the CMake build